--- a/detail.html
+++ b/detail.html
@@ -392,22 +392,25 @@
                         <div class="title">Màu sắc:</div>
                         <div class="selects-swap">
                           <div class="select-color">
-                            <img
-                              src="https://cdn.nhanh.vn/cdn/store1/41786/ps/20191112/brace1_800x1120.jpg"
-                              alt=""
-                            />
+                            <a href="javascript:void(0)" class="color-btn"
+                              ><img
+                                src="https://cdn.nhanh.vn/cdn/store1/41786/ps/20191112/brace1_800x1120.jpg"
+                                alt=""
+                            /></a>
                           </div>
                           <div class="select-color">
-                            <img
-                              src="https://cdn.nhanh.vn/cdn/store1/41786/ps/20191112/brace1_800x1120.jpg"
-                              alt=""
-                            />
+                            <a href="javascript:void(0)" class="color-btn"
+                              ><img
+                                src="https://cdn.nhanh.vn/cdn/store1/41786/ps/20191112/brace1_800x1120.jpg"
+                                alt=""
+                            /></a>
                           </div>
                           <div class="select-color">
-                            <img
-                              src="https://cdn.nhanh.vn/cdn/store1/41786/ps/20191112/brace1_800x1120.jpg"
-                              alt=""
-                            />
+                            <a href="javascript:void(0)" class="color-btn"
+                              ><img
+                                src="https://cdn.nhanh.vn/cdn/store1/41786/ps/20191112/brace1_800x1120.jpg"
+                                alt=""
+                            /></a>
                           </div>
                         </div>
                       </div>
@@ -415,13 +418,13 @@
                         <div class="title">Kích thước:</div>
                         <div class="selects-swap">
                           <div class="select-size">
-                            <a href="javascript:void(0)">M</a>
+                            <a href="javascript:void(0)" class="size-btn">M</a>
                           </div>
                           <div class="select-size">
-                            <a href="javascript:void(0)">M</a>
+                            <a href="javascript:void(0)" class="size-btn">M</a>
                           </div>
                           <div class="select-size">
-                            <a href="javascript:void(0)">M</a>
+                            <a href="javascript:void(0)" class="size-btn">M</a>
                           </div>
                         </div>
                         <div class="size-guide">
@@ -894,9 +897,9 @@
       $(document).ready(function() {
         $('.owl-carousel').owlCarousel({
           loop: true,
-          responsiveClass: true,
           items: 1,
-          dots: false
+          dots: false,
+          nav: true
         });
       });
     </script>
