--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                               x="0px"
                               y="0px"
                               viewBox="0 0 59.2 59.2"
-                              style="enable-background:new 0 0 59.2 59.2;"
+                              style="enable-background: new 0 0 59.2 59.2;"
                               xml:space="preserve"
                             >
                               <g>
@@ -387,7 +387,7 @@
                               width="27.948px"
                               height="27.948px"
                               viewBox="0 0 27.948 27.948"
-                              style="enable-background:new 0 0 27.948 27.948;"
+                              style="enable-background: new 0 0 27.948 27.948;"
                               xml:space="preserve"
                             >
                               <g>
@@ -432,7 +432,7 @@
                               x="0px"
                               y="0px"
                               viewBox="0 0 59.2 59.2"
-                              style="enable-background:new 0 0 59.2 59.2;"
+                              style="enable-background: new 0 0 59.2 59.2;"
                               xml:space="preserve"
                             >
                               <g>
@@ -460,7 +460,7 @@
                               width="27.948px"
                               height="27.948px"
                               viewBox="0 0 27.948 27.948"
-                              style="enable-background:new 0 0 27.948 27.948;"
+                              style="enable-background: new 0 0 27.948 27.948;"
                               xml:space="preserve"
                             >
                               <g>
@@ -505,7 +505,7 @@
                               x="0px"
                               y="0px"
                               viewBox="0 0 59.2 59.2"
-                              style="enable-background:new 0 0 59.2 59.2;"
+                              style="enable-background: new 0 0 59.2 59.2;"
                               xml:space="preserve"
                             >
                               <g>
@@ -533,7 +533,7 @@
                               width="27.948px"
                               height="27.948px"
                               viewBox="0 0 27.948 27.948"
-                              style="enable-background:new 0 0 27.948 27.948;"
+                              style="enable-background: new 0 0 27.948 27.948;"
                               xml:space="preserve"
                             >
                               <g>
@@ -578,7 +578,7 @@
                               x="0px"
                               y="0px"
                               viewBox="0 0 59.2 59.2"
-                              style="enable-background:new 0 0 59.2 59.2;"
+                              style="enable-background: new 0 0 59.2 59.2;"
                               xml:space="preserve"
                             >
                               <g>
@@ -606,7 +606,7 @@
                               width="27.948px"
                               height="27.948px"
                               viewBox="0 0 27.948 27.948"
-                              style="enable-background:new 0 0 27.948 27.948;"
+                              style="enable-background: new 0 0 27.948 27.948;"
                               xml:space="preserve"
                             >
                               <g>
@@ -651,7 +651,7 @@
                               x="0px"
                               y="0px"
                               viewBox="0 0 59.2 59.2"
-                              style="enable-background:new 0 0 59.2 59.2;"
+                              style="enable-background: new 0 0 59.2 59.2;"
                               xml:space="preserve"
                             >
                               <g>
@@ -679,7 +679,7 @@
                               width="27.948px"
                               height="27.948px"
                               viewBox="0 0 27.948 27.948"
-                              style="enable-background:new 0 0 27.948 27.948;"
+                              style="enable-background: new 0 0 27.948 27.948;"
                               xml:space="preserve"
                             >
                               <g>
@@ -724,7 +724,7 @@
                               x="0px"
                               y="0px"
                               viewBox="0 0 59.2 59.2"
-                              style="enable-background:new 0 0 59.2 59.2;"
+                              style="enable-background: new 0 0 59.2 59.2;"
                               xml:space="preserve"
                             >
                               <g>
@@ -752,7 +752,7 @@
                               width="27.948px"
                               height="27.948px"
                               viewBox="0 0 27.948 27.948"
-                              style="enable-background:new 0 0 27.948 27.948;"
+                              style="enable-background: new 0 0 27.948 27.948;"
                               xml:space="preserve"
                             >
                               <g>
@@ -797,7 +797,7 @@
                               x="0px"
                               y="0px"
                               viewBox="0 0 59.2 59.2"
-                              style="enable-background:new 0 0 59.2 59.2;"
+                              style="enable-background: new 0 0 59.2 59.2;"
                               xml:space="preserve"
                             >
                               <g>
@@ -825,7 +825,7 @@
                               width="27.948px"
                               height="27.948px"
                               viewBox="0 0 27.948 27.948"
-                              style="enable-background:new 0 0 27.948 27.948;"
+                              style="enable-background: new 0 0 27.948 27.948;"
                               xml:space="preserve"
                             >
                               <g>
@@ -890,7 +890,7 @@
                               x="0px"
                               y="0px"
                               viewBox="0 0 59.2 59.2"
-                              style="enable-background:new 0 0 59.2 59.2;"
+                              style="enable-background: new 0 0 59.2 59.2;"
                               xml:space="preserve"
                             >
                               <g>
@@ -918,7 +918,7 @@
                               width="27.948px"
                               height="27.948px"
                               viewBox="0 0 27.948 27.948"
-                              style="enable-background:new 0 0 27.948 27.948;"
+                              style="enable-background: new 0 0 27.948 27.948;"
                               xml:space="preserve"
                             >
                               <g>
@@ -963,7 +963,7 @@
                               x="0px"
                               y="0px"
                               viewBox="0 0 59.2 59.2"
-                              style="enable-background:new 0 0 59.2 59.2;"
+                              style="enable-background: new 0 0 59.2 59.2;"
                               xml:space="preserve"
                             >
                               <g>
@@ -991,7 +991,7 @@
                               width="27.948px"
                               height="27.948px"
                               viewBox="0 0 27.948 27.948"
-                              style="enable-background:new 0 0 27.948 27.948;"
+                              style="enable-background: new 0 0 27.948 27.948;"
                               xml:space="preserve"
                             >
                               <g>
@@ -1036,7 +1036,7 @@
                               x="0px"
                               y="0px"
                               viewBox="0 0 59.2 59.2"
-                              style="enable-background:new 0 0 59.2 59.2;"
+                              style="enable-background: new 0 0 59.2 59.2;"
                               xml:space="preserve"
                             >
                               <g>
@@ -1064,7 +1064,7 @@
                               width="27.948px"
                               height="27.948px"
                               viewBox="0 0 27.948 27.948"
-                              style="enable-background:new 0 0 27.948 27.948;"
+                              style="enable-background: new 0 0 27.948 27.948;"
                               xml:space="preserve"
                             >
                               <g>
@@ -1109,7 +1109,7 @@
                               x="0px"
                               y="0px"
                               viewBox="0 0 59.2 59.2"
-                              style="enable-background:new 0 0 59.2 59.2;"
+                              style="enable-background: new 0 0 59.2 59.2;"
                               xml:space="preserve"
                             >
                               <g>
@@ -1137,7 +1137,7 @@
                               width="27.948px"
                               height="27.948px"
                               viewBox="0 0 27.948 27.948"
-                              style="enable-background:new 0 0 27.948 27.948;"
+                              style="enable-background: new 0 0 27.948 27.948;"
                               xml:space="preserve"
                             >
                               <g>
@@ -1167,7 +1167,7 @@
                   <div class="collection-banner">
                     <a href="#" class="effect">
                       <img
-                        src="https://cdn.nhanh.vn/cdn/store1/41786/bn/sb_1574154631_319.JPG"
+                        src="https://cdn.nhanh.vn/cdn/store1/41786/bn/sb_1584524629_443.jpg"
                         alt=""
                       />
                     </a>
@@ -1182,7 +1182,7 @@
                 <div class="collection-banner">
                   <a href="#" class="effect_2">
                     <img
-                      src="https://cdn.nhanh.vn/cdn/store1/41786/bn/sb_1574154631_319.JPG"
+                      src="https://cdn.nhanh.vn/cdn/store1/41786/bn/sb_1584524629_443.jpg"
                       alt=""
                     />
                   </a>
@@ -1220,7 +1220,7 @@
                                   x="0px"
                                   y="0px"
                                   viewBox="0 0 59.2 59.2"
-                                  style="enable-background:new 0 0 59.2 59.2;"
+                                  style="enable-background: new 0 0 59.2 59.2;"
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1248,7 +1248,9 @@
                                   width="27.948px"
                                   height="27.948px"
                                   viewBox="0 0 27.948 27.948"
-                                  style="enable-background:new 0 0 27.948 27.948;"
+                                  style="
+                                    enable-background: new 0 0 27.948 27.948;
+                                  "
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1293,7 +1295,7 @@
                                   x="0px"
                                   y="0px"
                                   viewBox="0 0 59.2 59.2"
-                                  style="enable-background:new 0 0 59.2 59.2;"
+                                  style="enable-background: new 0 0 59.2 59.2;"
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1321,7 +1323,9 @@
                                   width="27.948px"
                                   height="27.948px"
                                   viewBox="0 0 27.948 27.948"
-                                  style="enable-background:new 0 0 27.948 27.948;"
+                                  style="
+                                    enable-background: new 0 0 27.948 27.948;
+                                  "
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1366,7 +1370,7 @@
                                   x="0px"
                                   y="0px"
                                   viewBox="0 0 59.2 59.2"
-                                  style="enable-background:new 0 0 59.2 59.2;"
+                                  style="enable-background: new 0 0 59.2 59.2;"
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1394,7 +1398,9 @@
                                   width="27.948px"
                                   height="27.948px"
                                   viewBox="0 0 27.948 27.948"
-                                  style="enable-background:new 0 0 27.948 27.948;"
+                                  style="
+                                    enable-background: new 0 0 27.948 27.948;
+                                  "
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1439,7 +1445,7 @@
                                   x="0px"
                                   y="0px"
                                   viewBox="0 0 59.2 59.2"
-                                  style="enable-background:new 0 0 59.2 59.2;"
+                                  style="enable-background: new 0 0 59.2 59.2;"
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1467,7 +1473,9 @@
                                   width="27.948px"
                                   height="27.948px"
                                   viewBox="0 0 27.948 27.948"
-                                  style="enable-background:new 0 0 27.948 27.948;"
+                                  style="
+                                    enable-background: new 0 0 27.948 27.948;
+                                  "
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1512,7 +1520,7 @@
                                   x="0px"
                                   y="0px"
                                   viewBox="0 0 59.2 59.2"
-                                  style="enable-background:new 0 0 59.2 59.2;"
+                                  style="enable-background: new 0 0 59.2 59.2;"
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1540,7 +1548,9 @@
                                   width="27.948px"
                                   height="27.948px"
                                   viewBox="0 0 27.948 27.948"
-                                  style="enable-background:new 0 0 27.948 27.948;"
+                                  style="
+                                    enable-background: new 0 0 27.948 27.948;
+                                  "
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1585,7 +1595,7 @@
                                   x="0px"
                                   y="0px"
                                   viewBox="0 0 59.2 59.2"
-                                  style="enable-background:new 0 0 59.2 59.2;"
+                                  style="enable-background: new 0 0 59.2 59.2;"
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1613,7 +1623,9 @@
                                   width="27.948px"
                                   height="27.948px"
                                   viewBox="0 0 27.948 27.948"
-                                  style="enable-background:new 0 0 27.948 27.948;"
+                                  style="
+                                    enable-background: new 0 0 27.948 27.948;
+                                  "
                                   xml:space="preserve"
                                 >
                                   <g>
@@ -1780,7 +1792,7 @@
       new WOW().init();
     </script>
     <script>
-      $(document).ready(function() {
+      $(document).ready(function () {
         $('.wrapper-collection .owl-carousel').owlCarousel({
           margin: 30,
           loop: true,
@@ -1789,24 +1801,24 @@
           responsive: {
             0: {
               items: 1,
-              nav: true
+              nav: true,
             },
             400: {
               items: 2,
               nav: true,
-              dots: false
+              dots: false,
             },
             767: {
               items: 3,
               nav: true,
-              dots: false
+              dots: false,
             },
             1000: {
               items: 4,
               nav: true,
-              loop: true
-            }
-          }
+              loop: true,
+            },
+          },
         });
         $('.box-collection .owl-carousel').owlCarousel({
           margin: 10,
@@ -1817,23 +1829,23 @@
           responsive: {
             0: {
               items: 1,
-              nav: true
+              nav: true,
             },
             400: {
               items: 2,
               nav: false,
-              dots: false
+              dots: false,
             },
             767: {
               items: 2,
-              nav: false
+              nav: false,
             },
             1000: {
               items: 3,
               nav: true,
-              loop: false
-            }
-          }
+              loop: false,
+            },
+          },
         });
       });
     </script>
